--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ android {
     
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
     
     // Adicionar para evitar erros de recursos
@@ -124,9 +125,12 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation "androidx.startup:startup-runtime:1.1.1"
     
+    // Timber para logging
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    
     // Testes
     testImplementation "junit:junit:$junit_version"
-    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "io:mockk:mockk:$mockk_version"
     androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
