feat(0002) implementando os servicos de standbyListeners  para validar no device (quandro abre a aplicação)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
 }
@@ -112,6 +113,7 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation libs.appcompat
     kapt "androidx.room:room-compiler:$room_version"
     
     // Hilt (injeção de dependência)
@@ -124,6 +126,9 @@ dependencies {
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation "androidx.startup:startup-runtime:1.1.1"
+    
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     
     // Timber para logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
