--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // Adicionar a classpath para o plugin de Navigation Safe Args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
