--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "ZenLauncher"
+rootProject.name = "MindfulLauncher"
 include ':app'
